<resources>
    <string name="app_name">EsamuRFT</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="action_login">Login</string>
    <string name="action_quests">Quests</string>
    <string name="action_camera">Camera</string>
    <string name="action_recipes">Recipes</string>
    <string name="action_baseview">Base</string>
    <string name="title_activity_maps">Térkép</string>
    <string name="title_map">TÉRKÉP</string>
    <string name="title_quests">KÜLDETÉSEK</string>
    <string name="title_camera">KAMERA</string>
    <string name="title_inventory">LELTÁR</string>
    <string name="title_base">BÁZIS</string>
    <string name="title_recipies">RECEPTEK</string>
    <string name="title_item_list">TÁRGYAK</string>
    <string name="title_settings">Beállítások</string>
    <string name="title_log_out">Kijelentkezés</string>
    <string name="title_register">REGISZTRÁCIÓ</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme"></string>
    <string name="cancel_Login">Login cancelled.</string>
    <string name="error_Login">Login unsuccessfulled.</string>
    <string name="logout">Logout</string>
    <string name="service_starting">GPS Szolgáltatás indul…</string>
    <string name="service_start_error_no_gps">NINCS GPS?! A szolgáltatás leáll!</string>
    <string name="service_start_error_no_gps_permission">NINCS GPS engedély?! A szolgáltatás leáll!</string>
    <string name="service_stopped">GPS Szolgáltatás leállt.</string>
    <string name="user_name">Felhasználónév:</string>
    <string name="user_password">Jelszó:</string>
    <string name="login">Belépés</string>
    <string name="registration">Regisztráció</string>
    <string name="dialog_gps_title">GPS engedélyezés</string>
    <string name="dialog_gps_message">Az alkalmazás működéséhez elengedhetetlen a GPS elérése. Engedélyezed?</string>
    <string name="dialog_gps_button_poz">Igen</string>
    <string name="dialog_gps_button_neg">Nem</string>
    <string name="dialog_gps_result_neg">Az alkalmazás futásához szükséges a GPS. Nem engedélyezted. Leállás.</string>
    <string name="dialog_gps_result_neg_tricky">Az alkalmazás futásához szükséges a GPS. Nem engedélyezted, CSAK VISSZALÉPTÉL A BEÁLLÍTÁSOKBÓL. Leállás.</string>
    <string name="service_running_error_gps_disabled_onthefly">A GPS le lett tiltva. Kapcsold vissza.</string>
    <string name="take_a_photo">Fotó készítése</string>
    <string name="upload_photos">Fotók feltöltése</string>
    <string name="navigate_to">Navigálás…</string>
    <string name="update_resources">Nyersanyagok frissítése</string>
    <string name="button_get_picture">Gather</string>
</resources>
